tests/samples/positive/types/copyable_value.ax
module copyable_value;

fn main() -> i32 {
    let value: i32 = 1;
    return value;
}
