tests/samples/negative/pattern_matching/match_expression_empty.ax
module match_expression_empty;

fn main() -> i32 {
    let value: i32 = 1;
    return match value {
    };
}
